basic query final update

--- a/src/main/ml-modules/root/css/project-move.css
+++ b/src/main/ml-modules/root/css/project-move.css
@@ -119,10 +119,12 @@ a.currPage{
 	color: black;
 	text-decoration: underline;
 	font-weight: bold;
+	width: 45px;
 }
 a.pageLink{
 	color: black;
 	text-decoration: none;
+	width: 45px;
 }
 #input{
 	padding-bottom: 15px;
